--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,9 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>Hello Java</td></tr>
-<tr><td>Hello Java Selenium</td></tr>
-<tr><td>Hello Python Selenium</td></tr>
-<tr><td>Hello Python</td></tr>
-<tr><td>Hello Python Selenium</td></tr>
-<tr><td>Hello Java</td></tr>
-<tr><td>Hello Python</td></tr>
-<tr><td>Hello Java Selenium</td></tr>
+<h2>Reporter output</h2><table><tr><td>login</td></tr>
+<tr><td>createCustomer</td></tr>
+<tr><td>logout</td></tr>
+<tr><td>login</td></tr>
+<tr><td>searchCustomer</td></tr>
+<tr><td>logout</td></tr>
 </table>
