--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,15 +4,31 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>scripts.Test1</td>
+<td>testNG.DemoTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc2</td>
-<td>&nbsp;</td></tr>
+<td>editCustomer</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createCustomer</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteCustomer</td>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchCustomer</td>
+<td>Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -20,74 +36,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>login</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>scripts.Test0</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tc1</td>
+<td>logout</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>scripts.Test3</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tc1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>scripts.Test2</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tc3</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
