--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>DemoTest.createCustomer()[pri:0, instance:testNG.DemoTest@3315d2d7]<br/>DemoTest.searchCustomer()[pri:0, instance:testNG.DemoTest@3315d2d7]<br/></td></tr>
+</table>
