--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7e463">  <td>22/09/15 20:18:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.tc1()[pri:0, instance:scripts.Test3@f381794]">tc1</td> 
-  <td>TestNG-test=Tests1-1@246998842</td>   <td></td> </tr>
-<tr bgcolor="e98b7c">  <td>22/09/15 20:18:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test0.tc1()[pri:0, instance:scripts.Test0@2e1d27ba]">tc1</td> 
-  <td>TestNG-test=Tests1-4@1378231611</td>   <td></td> </tr>
-<tr bgcolor="c7e463">  <td>22/09/15 20:18:21</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test3.tc1()[pri:0, instance:scripts.Test3@2e222612]">tc1</td> 
-  <td>TestNG-test=Tests2-1@635994649</td>   <td></td> </tr>
-<tr bgcolor="e98b7c">  <td>22/09/15 20:18:21</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test0.tc1()[pri:0, instance:scripts.Test0@7671cb68]">tc1</td> 
-  <td>TestNG-test=Tests2-4@582925554</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>22/09/15 20:18:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.tc2()[pri:0, instance:scripts.Test1@7e9131d5]">tc2</td> 
-  <td>TestNG-test=Tests1-3@1229845686</td>   <td></td> </tr>
-<tr bgcolor="f4937d">  <td>22/09/15 20:18:21</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.tc2()[pri:0, instance:scripts.Test1@73ee04c8]">tc2</td> 
-  <td>TestNG-test=Tests2-3@323718250</td>   <td></td> </tr>
-<tr bgcolor="6fadc7">  <td>22/09/15 20:18:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.tc3()[pri:0, instance:scripts.Test2@2cdd0d4b]">tc3</td> 
-  <td>TestNG-test=Tests1-2@407147893</td>   <td></td> </tr>
-<tr bgcolor="6fadc7">  <td>22/09/15 20:18:21</td>   <td>136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test2.tc3()[pri:0, instance:scripts.Test2@61386958]">tc3</td> 
-  <td>TestNG-test=Tests2-2@473827395</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.createCustomer()[pri:0, instance:testNG.DemoTest@3315d2d7]">createCustomer</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DemoTest.login()[pri:0, instance:testNG.DemoTest@3315d2d7]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DemoTest.login()[pri:0, instance:testNG.DemoTest@3315d2d7]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DemoTest.logout()[pri:0, instance:testNG.DemoTest@3315d2d7]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DemoTest.logout()[pri:0, instance:testNG.DemoTest@3315d2d7]">&lt;&lt;logout</td> 
+<td>&nbsp;</td>  <td>main@1361960727</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>22/10/05 15:21:41</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoTest.searchCustomer()[pri:0, instance:testNG.DemoTest@3315d2d7]">searchCustomer</td> 
+  <td>main@1361960727</td>   <td></td> </tr>
 </table>
