--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testNG.DemoTest.editCustomer</td></tr>
+<tr><td>testNG.DemoTest.deleteCustomer</td></tr>
 </table>
